update li status

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 						<li><a href="">katering</a></li>
 						<li><a href="">tentang</a></li>
 						<li><a href="">kontak</a></li>
+						<li><a href="">Status</a></li>
 					</ul>
 				</nav>
 			</header>
